# internal/adapter/inbound/http/health.go
@@ -1,22 +1,0 @@
-package http
-
-import (
-	"net/http"
-
-	"github.com/gin-gonic/gin"
-)
-
-type HealthResponse struct {
-	Status string `json:"status" example:"ok"`
-}
-
-// Health godoc
-// @Summary Health check
-// @Description Check API health status.
-// @Tags Health
-// @Produce json
-// @Success 200 {object} HealthResponse
-// @Router /health [get]
-func Health(c *gin.Context) {
-	c.JSON(http.StatusOK, HealthResponse{Status: "ok"})
-}
